[gd_scene load_steps=3 format=2]

[ext_resource path="res://dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Novel Portions/Text2.gd" type="Script" id=2]

[node name="controls" index="0" instance=ExtResource( 1 )]

_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" parent="." index="0"]

margin_left = -10.0
margin_right = 1294.0

[node name="Text" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Text" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = -10.0
margin_right = 1250.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "You must decide weather you will walk first or talk first."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "You must decide weather you will walk first or talk first."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 2 )
_sections_unfolded = [ "BBCode" ]

[node name="Timer" type="Timer" parent="Text/RichTextLabel" index="1"]

process_mode = 1
wait_time = 0.02
one_shot = false
autostart = true

[node name="Walk" type="Button" parent="Text" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 118.0
margin_top = 190.0
margin_right = 230.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Walk"
flat = false
align = 1

[node name="Talk" type="Button" parent="Text" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1020.0
margin_top = 190.0
margin_right = 1130.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Talk"
flat = false
align = 1

[node name="Control" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = -10.0
margin_right = 1270.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[connection signal="timeout" from="Text/RichTextLabel/Timer" to="Text/RichTextLabel" method="_on_timer_timeout"]

[connection signal="button_down" from="Text/Walk" to="Text/RichTextLabel" method="_on_walk_button_down"]

[connection signal="button_down" from="Text/Talk" to="Text/RichTextLabel" method="_on_talk_button_down"]


